# SC2026

./: .gitignore  README.md  SC2025.sln  mount_250620.sh
.devcontainer/: devcontainer.json
SC2026_Python/: Dockerfile  README.md  docker_hub_build.sh  launch_container.sh  launch_container1.sh  make_layer.py  make_layer.spec  shell_image.sh  shell_image1.sh  shell_image2.sh  shell_video.sh  shell_video1.sh  test.py  test_linux.py  test_linux1.py  test_linux2.py
SCCLIPipeline/: .dockerignore  .gitignore  README.md  mount.sh  pyproject.toml  sample.sh  setup.sh
SCCLIPipeline/npo-engine-lib/: .gitignore  pyproject.toml
SCCLIPipeline/npo-engine-lib/document/: README.v0.1.0.md  README.v0.1.2.md  README.v0.1.3.md
SCCLIPipeline/npo-engine-lib/src/npo_engine/: __init__.py  exceptions.py  run.py  utils.py
SCCLIPipeline/npo-redis/: docker-compose.yml
SCCLIPipeline/npo-submit/: .env.example  Dockerfile  docker-compose.yml
SCCLIPipeline/npo-worker/: .env.example  Dockerfile  docker-compose.yml
SCCLIPipeline/scripts/: build-submit-image.sh  build-worker-image.sh  run-worker.sh  submit-shell.sh  submit.sh
SCCLIPipeline/src/npo_cli_pipeline/: celery_app.py  cli.py  config.py  job_store.py  logs.py  operations.py  tasks.py
SCCLIPipeline/state/jobs/: 0eb7c7f0-9a51-466a-bbd4-41f7b7976819.json  1be36f0b-8559-4ed5-8074-2671f6e39f90.json
SJSCImageFromVideo/: DecoderManager.cpp  DecoderManager.h  Makefile  SCDecoder.cpp  SCDecoder.h  SJSCImageFromVideo.cpp  etriSCDecoder.cpp  etriSCDecoder.h
docker/: Dockerfile  launch_container.sh
etriSCAPI/: Makefile  SJCUDACommon.h  (+13 more)
(+15 files in other folders)
