[project]
name = "npo-engine-lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "veramocor", email = "veramocor.v@gmail.com" }]
requires-python = ">=3.12.9"
dependencies = [
    "docker>=7.1.0",
    "loguru>=0.7.3",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "npo_engine"
